DesesperoParser.java
// Generated from Desespero.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DesesperoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INICIO=1, FIM=2, IFDES=3, ELSE=4, WHILEDES=5, FORDES=6, DODES=7, INT=8, 
		STRING=9, DOUBLE=10, BOOL=11, BIN=12, HEXA=13, VOID=14, BREAK=15, SWITCHDES=16, 
		CASE=17, DEFAULTDES=18, MAIS=19, MENOS=20, MAIORQUE=21, MENORQUE=22, MAIOROUIGUAL=23, 
		MENOROUIGUAL=24, IDENTICO=25, DIFERENTE=26, AND=27, OR=28, AND2=29, OR2=30, 
		NOT=31, BITSHIFTRIGHT=32, BITSHIFTLEFT=33, BITAND=34, BITOR=35, BITXOR=36, 
		BITNOT=37, CONSTREAL=38, CONSTINTEIRO=39, CONSTBINARIO=40, CONSTHEXA=41, 
		CONSTSTRING=42, CONSTLOGICO=43, COMENTARIOLINHA=44, COMENTARIOMULTIPLO=45, 
		PONTO=46, IGUAL=47, PONTOEVIRGULA=48, VIRGULA=49, DOISPONTOS=50, COLCHETESABRE=51, 
		COLCHETESFECHA=52, CHAVESABRE=53, CHAVESFECHA=54, PARENTESEABRE=55, PARENTESEFECHA=56, 
		ID=57, RETORNO=58, WHITESPACE=59;
	public static final int
		RULE_prog = 0, RULE_funcoes = 1, RULE_parametros = 2, RULE_bloco = 3, 
		RULE_comandos = 4, RULE_retorno = 5, RULE_chamadaFuncao = 6, RULE_parametrosChamada = 7, 
		RULE_condicionais = 8, RULE_ifdes = 9, RULE_ifdeselse = 10, RULE_ifdeselseif = 11, 
		RULE_whiledes = 12, RULE_fordes = 13, RULE_dodes = 14, RULE_switchdes = 15, 
		RULE_switchCase = 16, RULE_defaultdes = 17, RULE_declaracoes = 18, RULE_multidimensional = 19, 
		RULE_declaracoesArray = 20, RULE_subArrayDeclaracoes = 21, RULE_atribuicoes = 22, 
		RULE_atribuicoesIncEDec = 23, RULE_tipoComVoid = 24, RULE_tipo = 25, RULE_expressao = 26, 
		RULE_operations = 27, RULE_op_rel = 28, RULE_op_neg = 29, RULE_op_bitwise = 30, 
		RULE_op_arit_baixa = 31, RULE_op_logica = 32, RULE_val_final = 33;
	public static final String[] ruleNames = {
		"prog", "funcoes", "parametros", "bloco", "comandos", "retorno", "chamadaFuncao", 
		"parametrosChamada", "condicionais", "ifdes", "ifdeselse", "ifdeselseif", 
		"whiledes", "fordes", "dodes", "switchdes", "switchCase", "defaultdes", 
		"declaracoes", "multidimensional", "declaracoesArray", "subArrayDeclaracoes", 
		"atribuicoes", "atribuicoesIncEDec", "tipoComVoid", "tipo", "expressao", 
		"operations", "op_rel", "op_neg", "op_bitwise", "op_arit_baixa", "op_logica", 
		"val_final"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'CORRAM PARA AS COLINAS!!!'", "'VAMOS TODOS MORRER'", "'POR AQUI!!!'", 
		"' NAO, DROGA POR AQUI!!!'", "'CADE A SAIDA!!!'", "'NOS PERDEMOS DE NOVO...'", 
		"'CORRAM PARA AS COLINAS... DE NOVO'", "'TA TODO MUNDO INTEIRO?!?'", "'AONDE FICA A CADEIA?!?'", 
		"'NAO PODE SER REAL...'", "'ACHO QUE FOI UM FANTASMA!!!'", "'OU É VOCE OU EU !'", 
		"'ESTOU TROCANDO NUMEROS POR LETRAS'", "'ESTOU ME SENTINDO TAO VAZIO...'", 
		"'YOU SHALL NOT PASS!!!'", "'SALVEM-SE QUEM PUDER!!!'", "'AAAH!!'", "'AAAAAAAAAAAAH!!!!!'", 
		"'CARREGUE!!!'", "'DESCARREGUE!!!'", "'>;-;>'", "'<;-;<'", "'>;-;|'", 
		"'<;-;|'", "'|;-;|'", "'!;-;!'", "'JUNTOS CONSEGUIREMOS!!!'", "'CADA UM POR SI!!!'", 
		"'JUNTOS CONSEGUIREMOS!!! MAS SE DER MERDA NEM VOU CONTINUAR'", "'CADA UM POR SI!!! MAS SE DER MERDA NEM VOU CONTINUAR'", 
		"'NAAAAAO!!!'", "'CRIANCAS, AVANCAR!!!'", "'CRIANCAS, RECUAR!!!'", "'CRIANCAS, JUNTOS CONSEGUIREMOS!!!'", 
		"'CRIANCAS, CADA UM POR SI!!!'", "'CRIANCAS, SO UM SOBREVIVERA'", "'CRIANCAS, NAAAAAO!!!'", 
		null, null, null, null, null, "'(VIVO)|(MORTO)'", null, null, "'.'", "';-;'", 
		"';'", "','", "':'", "'AI'", "'AI!'", "'OUCH'", "'OUCH!'", "'UI'", "'UI!'", 
		null, "'VOLTEM!VOLTEM!VOLTEM!!!'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INICIO", "FIM", "IFDES", "ELSE", "WHILEDES", "FORDES", "DODES", 
		"INT", "STRING", "DOUBLE", "BOOL", "BIN", "HEXA", "VOID", "BREAK", "SWITCHDES", 
		"CASE", "DEFAULTDES", "MAIS", "MENOS", "MAIORQUE", "MENORQUE", "MAIOROUIGUAL", 
		"MENOROUIGUAL", "IDENTICO", "DIFERENTE", "AND", "OR", "AND2", "OR2", "NOT", 
		"BITSHIFTRIGHT", "BITSHIFTLEFT", "BITAND", "BITOR", "BITXOR", "BITNOT", 
		"CONSTREAL", "CONSTINTEIRO", "CONSTBINARIO", "CONSTHEXA", "CONSTSTRING", 
		"CONSTLOGICO", "COMENTARIOLINHA", "COMENTARIOMULTIPLO", "PONTO", "IGUAL", 
		"PONTOEVIRGULA", "VIRGULA", "DOISPONTOS", "COLCHETESABRE", "COLCHETESFECHA", 
		"CHAVESABRE", "CHAVESFECHA", "PARENTESEABRE", "PARENTESEFECHA", "ID", 
		"RETORNO", "WHITESPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Desespero.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DesesperoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode INICIO() { return getToken(DesesperoParser.INICIO, 0); }
		public TerminalNode CHAVESABRE() { return getToken(DesesperoParser.CHAVESABRE, 0); }
		public FuncoesContext funcoes() {
			return getRuleContext(FuncoesContext.class,0);
		}
		public TerminalNode CHAVESFECHA() { return getToken(DesesperoParser.CHAVESFECHA, 0); }
		public TerminalNode FIM() { return getToken(DesesperoParser.FIM, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DesesperoVisitor ) return ((DesesperoVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(INICIO);
			setState(69);
			match(CHAVESABRE);
			setState(70);
			funcoes();
			setState(71);
			match(CHAVESFECHA);
			setState(72);
			match(FIM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncoesContext extends ParserRuleContext {
		public TipoComVoidContext tipoComVoid() {
			return getRuleContext(TipoComVoidContext.class,0);
		}
		public TerminalNode ID() { return getToken(DesesperoParser.ID, 0); }
		public TerminalNode PARENTESEABRE() { return getToken(DesesperoParser.PARENTESEABRE, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TerminalNode PARENTESEFECHA() { return getToken(DesesperoParser.PARENTESEFECHA, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public FuncoesContext funcoes() {
			return getRuleContext(FuncoesContext.class,0);
		}
		public FuncoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).enterFuncoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).exitFuncoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DesesperoVisitor ) return ((DesesperoVisitor<? extends T>)visitor).visitFuncoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncoesContext funcoes() throws RecognitionException {
		FuncoesContext _localctx = new FuncoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funcoes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << DOUBLE) | (1L << BOOL) | (1L << BIN) | (1L << HEXA) | (1L << VOID))) != 0)) {
				{
				setState(74);
				tipoComVoid();
				setState(75);
				match(ID);
				setState(76);
				match(PARENTESEABRE);
				setState(77);
				parametros();
				setState(78);
				match(PARENTESEFECHA);
				setState(79);
				bloco();
				setState(80);
				funcoes();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosContext extends ParserRuleContext {
		public List<TipoContext> tipo() {
			return getRuleContexts(TipoContext.class);
		}
		public TipoContext tipo(int i) {
			return getRuleContext(TipoContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(DesesperoParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DesesperoParser.ID, i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(DesesperoParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(DesesperoParser.VIRGULA, i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).enterParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).exitParametros(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DesesperoVisitor ) return ((DesesperoVisitor<? extends T>)visitor).visitParametros(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << DOUBLE) | (1L << BOOL) | (1L << BIN) | (1L << HEXA))) != 0)) {
				{
				setState(84);
				tipo();
				setState(85);
				match(ID);
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==VIRGULA) {
					{
					{
					setState(86);
					match(VIRGULA);
					setState(87);
					tipo();
					setState(88);
					match(ID);
					}
					}
					setState(94);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocoContext extends ParserRuleContext {
		public TerminalNode CHAVESABRE() { return getToken(DesesperoParser.CHAVESABRE, 0); }
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode CHAVESFECHA() { return getToken(DesesperoParser.CHAVESFECHA, 0); }
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).exitBloco(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DesesperoVisitor ) return ((DesesperoVisitor<? extends T>)visitor).visitBloco(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bloco);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(CHAVESABRE);
			setState(98);
			comandos();
			setState(99);
			match(CHAVESFECHA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandosContext extends ParserRuleContext {
		public List<CondicionaisContext> condicionais() {
			return getRuleContexts(CondicionaisContext.class);
		}
		public CondicionaisContext condicionais(int i) {
			return getRuleContext(CondicionaisContext.class,i);
		}
		public List<TerminalNode> PONTOEVIRGULA() { return getTokens(DesesperoParser.PONTOEVIRGULA); }
		public TerminalNode PONTOEVIRGULA(int i) {
			return getToken(DesesperoParser.PONTOEVIRGULA, i);
		}
		public List<RetornoContext> retorno() {
			return getRuleContexts(RetornoContext.class);
		}
		public RetornoContext retorno(int i) {
			return getRuleContext(RetornoContext.class,i);
		}
		public List<DeclaracoesContext> declaracoes() {
			return getRuleContexts(DeclaracoesContext.class);
		}
		public DeclaracoesContext declaracoes(int i) {
			return getRuleContext(DeclaracoesContext.class,i);
		}
		public List<AtribuicoesContext> atribuicoes() {
			return getRuleContexts(AtribuicoesContext.class);
		}
		public AtribuicoesContext atribuicoes(int i) {
			return getRuleContext(AtribuicoesContext.class,i);
		}
		public List<ChamadaFuncaoContext> chamadaFuncao() {
			return getRuleContexts(ChamadaFuncaoContext.class);
		}
		public ChamadaFuncaoContext chamadaFuncao(int i) {
			return getRuleContext(ChamadaFuncaoContext.class,i);
		}
		public ComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).enterComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).exitComandos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DesesperoVisitor ) return ((DesesperoVisitor<? extends T>)visitor).visitComandos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandosContext comandos() throws RecognitionException {
		ComandosContext _localctx = new ComandosContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_comandos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IFDES) | (1L << WHILEDES) | (1L << FORDES) | (1L << DODES) | (1L << INT) | (1L << STRING) | (1L << DOUBLE) | (1L << BOOL) | (1L << BIN) | (1L << HEXA) | (1L << SWITCHDES) | (1L << ID) | (1L << RETORNO))) != 0)) {
				{
				setState(110);
				switch (_input.LA(1)) {
				case IFDES:
				case WHILEDES:
				case FORDES:
				case DODES:
				case SWITCHDES:
					{
					setState(101);
					condicionais();
					}
					break;
				case INT:
				case STRING:
				case DOUBLE:
				case BOOL:
				case BIN:
				case HEXA:
				case ID:
				case RETORNO:
					{
					{
					setState(106);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						setState(102);
						retorno();
						}
						break;
					case 2:
						{
						setState(103);
						declaracoes();
						}
						break;
					case 3:
						{
						setState(104);
						atribuicoes();
						}
						break;
					case 4:
						{
						setState(105);
						chamadaFuncao();
						}
						break;
					}
					setState(108);
					match(PONTOEVIRGULA);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RetornoContext extends ParserRuleContext {
		public TerminalNode RETORNO() { return getToken(DesesperoParser.RETORNO, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public RetornoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_retorno; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).enterRetorno(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).exitRetorno(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DesesperoVisitor ) return ((DesesperoVisitor<? extends T>)visitor).visitRetorno(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RetornoContext retorno() throws RecognitionException {
		RetornoContext _localctx = new RetornoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_retorno);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(RETORNO);
			setState(116);
			expressao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChamadaFuncaoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DesesperoParser.ID, 0); }
		public TerminalNode PARENTESEABRE() { return getToken(DesesperoParser.PARENTESEABRE, 0); }
		public ParametrosChamadaContext parametrosChamada() {
			return getRuleContext(ParametrosChamadaContext.class,0);
		}
		public TerminalNode PARENTESEFECHA() { return getToken(DesesperoParser.PARENTESEFECHA, 0); }
		public ChamadaFuncaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chamadaFuncao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).enterChamadaFuncao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).exitChamadaFuncao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DesesperoVisitor ) return ((DesesperoVisitor<? extends T>)visitor).visitChamadaFuncao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChamadaFuncaoContext chamadaFuncao() throws RecognitionException {
		ChamadaFuncaoContext _localctx = new ChamadaFuncaoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_chamadaFuncao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(ID);
			setState(119);
			match(PARENTESEABRE);
			setState(120);
			parametrosChamada();
			setState(121);
			match(PARENTESEFECHA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosChamadaContext extends ParserRuleContext {
		public List<ExpressaoContext> expressao() {
			return getRuleContexts(ExpressaoContext.class);
		}
		public ExpressaoContext expressao(int i) {
			return getRuleContext(ExpressaoContext.class,i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(DesesperoParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(DesesperoParser.VIRGULA, i);
		}
		public ParametrosChamadaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametrosChamada; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).enterParametrosChamada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DesesperoListener ) ((DesesperoListener)listener).exitParametrosChamada(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DesesperoVisitor ) return ((DesesperoVisitor<? extends T>)visitor).visitParametrosChamada(this);
			else return visitor.visitChildren(this);
		}
	}
